--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds" method="POST">
+    <form action="/campgrounds" method="POST" class="validated-form" novalidate>
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -12,7 +12,9 @@
           id="title"
           name="campground[title]"
           value="<%= campground.title  %> "
+          required
         />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
@@ -22,7 +24,9 @@
           id="location"
           name="campground[location]"
           value="<%= campground.location  %> "
+          required
         />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
@@ -32,7 +36,9 @@
           id="location"
           name="campground[image]"
           value="<%= campground.image  %> "
+          required
         />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
@@ -47,8 +53,10 @@
             aria-describedby="basic-addon1"
             name="campground[price]"
             value="<%= campground.price  %> "
+            required
           />
         </div>
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="description">Description</label>
@@ -57,9 +65,11 @@
           type="text"
           id="location"
           name="campground[description]"
+          required
         >
 <%= campground.description  %></textarea
         >
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <button class="btn btn-info text-white">Update Campground</button>
