--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -32,5 +32,30 @@
       </div>
       <div class="card-footer text-muted">2 day ago</div>
     </div>
+    <h2>Leave A Review</h2>
+    <form action="" class="mb-3">
+      <div class="mb-3">
+        <label class="form-label" for="rating">Rating</label>
+        <input
+          type="range"
+          id="rating"
+          class="form-range"
+          min="0"
+          max="5"
+          name="review[rating]"
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="body">Review</label>
+        <textarea
+          class="form-control"
+          name="review[body]"
+          id="body"
+          cols="30"
+          rows="3"
+        ></textarea>
+      </div>
+      <button class="btn btn-success">Submit</button>
+    </form>
   </div>
 </div>
