--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -33,7 +33,11 @@
       <div class="card-footer text-muted">2 day ago</div>
     </div>
     <h2>Leave A Review</h2>
-    <form action="" class="mb-3">
+    <form
+      action="/campgrounds/<%= campground._id %>/reviews"
+      method="POST"
+      class="mb-3"
+    >
       <div class="mb-3">
         <label class="form-label" for="rating">Rating</label>
         <input
