--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -64,5 +64,11 @@
       </div>
       <button class="btn btn-success">Submit</button>
     </form>
+    <% campground.reviews.forEach((review) => { %>
+    <div class="mb-3">
+      <p>Rating: <%= review.rating %></p>
+      <p>Review: <%= review.body %></p>
+    </div>
+    <% }) %>
   </div>
 </div>
