--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <%- layout('layouts/boilerplate') %>
 
 <div class="row">
-  <div class="col-6 offset-3">
+  <div class="col-6">
     <div class="card mb-3">
       <img
         src="<%= campground.image  %>"
@@ -32,6 +32,8 @@
       </div>
       <div class="card-footer text-muted">2 day ago</div>
     </div>
+  </div>
+  <div class="col-6">
     <h2>Leave A Review</h2>
     <form
       action="/campgrounds/<%= campground._id %>/reviews"
@@ -65,9 +67,11 @@
       <button class="btn btn-success">Submit</button>
     </form>
     <% campground.reviews.forEach((review) => { %>
-    <div class="mb-3">
-      <p>Rating: <%= review.rating %></p>
-      <p>Review: <%= review.body %></p>
+    <div class="card mb-3">
+      <div class="card-body">
+        <h5 class="card-title">Rating: <%= review.rating %></h5>
+        <p class="card-text">Review: <%= review.body %></p>
+      </div>
     </div>
     <% }) %>
   </div>
