--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -39,6 +39,7 @@
     </div>
   </div>
   <div class="col-6">
+    <% if(currentUser) { %>
     <h2>Leave A Review</h2>
     <form
       action="/campgrounds/<%= campground._id %>/reviews"
@@ -71,7 +72,7 @@
       </div>
       <button class="btn btn-success">Submit</button>
     </form>
-    <% campground.reviews.forEach((review) => { %>
+    <% } %> <% campground.reviews.forEach((review) => { %>
     <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title">Rating: <%= review.rating %></h5>
